# bstree

./: .gitignore  :w  CMakeLists.txt  README.md
include/: bst.h  node.hpp
src/: main.cpp  test.cpp
