cmake_minimum_required(VERSION 2.8)
project(bstree)

set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -std=c++17 -O2")
add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})

include_directories("./include")
file(GLOB SOURCES "./src/*.cpp")

find_package(UnitTest++ REQUIRED)
# set(UnitTest++_CONFIG "/usr/local/lib/cmake/UnitTest++/UnitTest++Config.cmake")
# set(UnitTest++_CONSIDERED_CONFIGS "/usr/local/lib/cmake/UnitTest++/UnitTest++Config.cmake")
# set(UnitTest++_CONSIDERED_VERSIONS "unknown")
# set(UnitTest++_DIR "/usr/local/lib/cmake/UnitTest++")
# set(UnitTest++_FOUND "1")
# set(UnitTest++_VERSION_COUNT "0")
# set(UnitTest++_VERSION_MAJOR "0")
# set(UnitTest++_VERSION_MINOR "0")
# set(UnitTest++_VERSION_PATCH "0")
# set(UnitTest++_VERSION_TWEAK "0")
#
include_directories(${UTPP_INCLUDE_DIRS})
#
# add_definitions(${UnitTest++_CONFIG})
# add_definitions(${UnitTest++_CONSIDERED_CONFIGS})
# add_definitions(${UnitTest++_CONSIDERED_VERSIONS})
# add_definitions(${UnitTest++_DIR})
# add_definitions(${UnitTest++_FOUND})
# add_definitions(${UnitTest++_VERSION_COUNT})
# add_definitions(${UnitTest++_VERSION_MAJOR})
# add_definitions(${UnitTest++_VERSION_MINOR})
# add_definitions(${UnitTest++_VERSION_PATCH})
# add_definitions(${UnitTest++_VERSION_TWEAK})
#
add_executable(bstree ${SOURCES})
